language/move-lang/tests/move_check/liveness/dead_refs_simple_invalid.exp
error[E07002]: mutable ownership violated
  ┌─ tests/move_check/liveness/dead_refs_simple_invalid.move:5:13
  │
4 │         let x_ref = &mut x;
  │                     ------ It is still being mutably borrowed by this reference
5 │         _ = x;
  │             ^ Invalid copy of local 'x'

error[E07003]: invalid operation, could create dangling a reference
  ┌─ tests/move_check/liveness/dead_refs_simple_invalid.move:6:13
  │
4 │         let x_ref = &mut x;
  │                     ------ It is still being mutably borrowed by this reference
5 │         _ = x;
6 │         _ = move x;
  │             ^^^^^^ Invalid move of local 'x'

error[E07002]: mutable ownership violated
   ┌─ tests/move_check/liveness/dead_refs_simple_invalid.move:13:13
   │
12 │         let x_ref = &mut x;
   │                     ------ It is still being mutably borrowed by this reference
13 │         _ = x;
   │             ^ Invalid copy of local 'x'

error[E07003]: invalid operation, could create dangling a reference
   ┌─ tests/move_check/liveness/dead_refs_simple_invalid.move:14:13
   │
12 │         let x_ref = &mut x;
   │                     ------ It is still being mutably borrowed by this reference
13 │         _ = x;
14 │         _ = move x;
   │             ^^^^^^ Invalid move of local 'x'

